k8s-crc/employee-api-crc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api-crc
  namespace: a-badr-dev
  labels:
    app: employee-api-crc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-api-crc
  template:
    metadata:
      labels:
        app: employee-api-crc
    spec:
      serviceAccountName: employee-api-sa
      containers:
        - name: employee-api
          image: image-registry.openshift-image-registry.svc:5000/a-badr-dev/employee-api-crc:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL

      restartPolicy: Always
