k8s-crc/employee-postgres-crc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-postgres-crc
  namespace: a-badr-dev
  labels:
    app: employee-postgres-crc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-postgres-crc
  template:
    metadata:
      labels:
        app: employee-postgres-crc
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: pgdata

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: employee-pvc-crc

      restartPolicy: Always
