k8s-crc/employee-api-crc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service-crc
  namespace: a-badr-dev
  labels:
    app: employee-api-crc
spec:
  type: ClusterIP
  selector:
    app: employee-api-crc
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
