k8s-crc/employee-frontend-crc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-frontend-service-crc
  namespace: a-badr-dev
  labels:
    app: employee-frontend-crc
spec:
  type: ClusterIP
  selector:
    app: employee-frontend-crc
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
